--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 										<li><a href="https://github.com/Abdihakimh25/AbdihakimProjects/blob/main/NG.py" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date">April 8, 2022</span>
+										<h2><a href="#">Line following robot<br />
+										with C++</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/lineF.jpg" alt="" /></a>
+									<p>In this project we made a robot follow a black line through tracks.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Abdihakimh25/AbdihakimProjects/blob/main/LineFollowingBot.c" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 					
 
